feat: client side revoke request
