# certificate_authority/revocation_request_service.py
@@ -29,15 +29,23 @@ class RevocationRequestService:
         results = self.__repository.get_request(transaction)
         if len(results) != 1:
             raise Exception(f"Transaction not found")
-        status = results[0].status
-        if status != ApprovalStatus.RevocationRequested:
-            raise Exception(f"Transaction is in {status.value}, expected status is {ApprovalStatus.RevocationRequested.value}")
+        request: RegistrationRequest = results[0]
+        status = request.status
+        if status != ApprovalStatus.Approved:
+            raise Exception(f"Transaction is in {status.value}, expected status is {ApprovalStatus.Approved.value}")
         challenge = self.challenges[transaction.public_key]
         
         pub_key = serialization.load_pem_public_key(bytes.fromhex(transaction.public_key))
-        pub_key.verify(signature, challenge, 
-                    algorithm=hashes.SHA256(),
-                    padding=padding.PSS(mgf=padding.MGF1(hashes.SHA256()),salt_length=padding.PSS.MAX_LENGTH))
+        try:
+            pub_key.verify(signature, challenge, 
+                        algorithm=hashes.SHA256(),
+                        padding=padding.PSS(mgf=padding.MGF1(hashes.SHA256()),salt_length=padding.PSS.MAX_LENGTH))
+            request.status = ApprovalStatus.RevocationRequested
+            self.__repository.update_rqeuest(request)
+            return True
+        except Exception as e:
+            print(e)
+            return False
         
     def get_revoke_requests(self) -> List[RegistrationRequest]:
         return self.__repository.get_revocation_request()
